// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactComponent when provided a name, a properly formatted email and a message of more than 10 characters should mark all fields as valid 1`] = `
<app-contact
  fb={[Function FormBuilder]}
  form={[Function FormGroup]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    ng-reflect-form="[object Object]"
    novalidate=""
  >
    <mat-card
      class="mat-card"
    >
      <mat-card-title
        class="mat-card-title"
      >
        Contact Form
      </mat-card-title>
      <mat-card-content
        class="flex flex-column mat-card-content"
      >
        <app-input
          class="ng-untouched ng-pristine ng-valid"
          formcontrolname="name"
          label="Name"
          ng-reflect-label="Name"
          ng-reflect-name="name"
          ng-reflect-type="text"
          type="text"
        >
          <input
            class="ng-untouched ng-pristine ng-valid"
            ng-reflect-form="[object Object]"
            type="text"
          />
        </app-input>
        <app-input
          class="ng-untouched ng-pristine ng-valid"
          formcontrolname="email"
          label="Email"
          ng-reflect-label="Email"
          ng-reflect-name="email"
          ng-reflect-type="email"
          type="email"
        >
          <input
            class="ng-untouched ng-pristine ng-valid"
            ng-reflect-form="[object Object]"
            type="email"
          />
        </app-input>
        <app-textarea
          class="ng-untouched ng-pristine ng-valid"
          formcontrolname="message"
          label="Message"
          ng-reflect-label="Message"
          ng-reflect-name="message"
        >
          <textarea
            class="ng-untouched ng-pristine ng-valid"
            ng-reflect-form="[object Object]"
          />
        </app-textarea>
      </mat-card-content>
      <mat-card-actions
        class="mat-card-actions"
      >
        <button
          class="mat-raised-button mat-primary _mat-animation-noopable"
          color="primary"
          mat-raised-button=""
          ng-reflect-color="primary"
          ng-reflect-disabled="false"
          type="submit"
        >
          <span
            class="mat-button-wrapper"
          >
            Save
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="[object HTMLButtonElement]"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </button>
        <button
          class="mat-raised-button _mat-animation-noopable"
          mat-raised-button=""
          type="button"
        >
          <span
            class="mat-button-wrapper"
          >
            Clear
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="[object HTMLButtonElement]"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </button>
      </mat-card-actions>
    </mat-card>
  </form>
</app-contact>
`;

exports[`ContactComponent when provided an empty name, an improperly formatted email and a message of less than 10 characters should mark all fields as invalid 1`] = `
<app-contact
  fb={[Function FormBuilder]}
  form={[Function FormGroup]}
>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    novalidate=""
  >
    <mat-card
      class="mat-card"
    >
      <mat-card-title
        class="mat-card-title"
      >
        Contact Form
      </mat-card-title>
      <mat-card-content
        class="flex flex-column mat-card-content"
      >
        <app-input
          class="ng-untouched ng-pristine ng-invalid"
          formcontrolname="name"
          label="Name"
          ng-reflect-label="Name"
          ng-reflect-name="name"
          ng-reflect-type="text"
          type="text"
        >
          <input
            class="ng-untouched ng-pristine ng-invalid"
            ng-reflect-form="[object Object]"
            type="text"
          />
        </app-input>
        <app-input
          class="ng-untouched ng-pristine ng-invalid"
          formcontrolname="email"
          label="Email"
          ng-reflect-label="Email"
          ng-reflect-name="email"
          ng-reflect-type="email"
          type="email"
        >
          <input
            class="ng-untouched ng-pristine ng-invalid"
            ng-reflect-form="[object Object]"
            type="email"
          />
        </app-input>
        <app-textarea
          class="ng-untouched ng-pristine ng-invalid"
          formcontrolname="message"
          label="Message"
          ng-reflect-label="Message"
          ng-reflect-name="message"
        >
          <textarea
            class="ng-untouched ng-pristine ng-invalid"
            ng-reflect-form="[object Object]"
          />
        </app-textarea>
      </mat-card-content>
      <mat-card-actions
        class="mat-card-actions"
      >
        <button
          class="mat-raised-button mat-primary _mat-animation-noopable"
          color="primary"
          disabled=""
          mat-raised-button=""
          ng-reflect-color="primary"
          ng-reflect-disabled="true"
          type="submit"
        >
          <span
            class="mat-button-wrapper"
          >
            Save
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="true"
            ng-reflect-trigger="[object HTMLButtonElement]"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </button>
        <button
          class="mat-raised-button _mat-animation-noopable"
          mat-raised-button=""
          type="button"
        >
          <span
            class="mat-button-wrapper"
          >
            Clear
          </span>
          <div
            class="mat-button-ripple mat-ripple"
            matripple=""
            ng-reflect-centered="false"
            ng-reflect-disabled="false"
            ng-reflect-trigger="[object HTMLButtonElement]"
          />
          <div
            class="mat-button-focus-overlay"
          />
        </button>
      </mat-card-actions>
    </mat-card>
  </form>
</app-contact>
`;
